# test_python_repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/my_uv_project/: __init__.py  main.py
tests/: test_main.py
